@@ -1854,6 +1854,10 @@ Tue Jul 20 09:15:21 CEST 2004
 Mon Jul 26 09:04:53 CEST 2004
 
 	- SQL defines are only used in SQL space in Informix mode.
+	
+Mon Sep  6 13:17:46 CEST 2004
+
+	- Fixed bug in Informix mode that caused a segfault.
 	- Set pgtypes library version to 1.2.
 	- Set ecpg version to 3.2.0.
 	- Set compat library version to 1.2.
